[package]
name = "yamux-cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "yamux"
path = "src/main.rs"

[dependencies]
yamux = "0.10"
futures = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.16", features = ["rt-multi-thread", "macros", "net", "io-std", "io-util"] }
tokio-util = { version = "0.7", features=["compat"] }
anyhow = "1.0"
pin-project-lite = "0.2"
clap = { version = "3.1.8", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
auto_enums = { version = "0.8", features = ["tokio1"] }
cfg-if = "1.0"
